📱 spaceX Responsive fonts mobile and large screens, using remote imgs and spaceX favicon

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
       src="https://kit.fontawesome.com/3bc0db76eb.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon" />
     <title>SpaceX</title>
   </head>
   <body>
     <article class="card">
       <picture class="card__img-container">
         <img
-          src="assets/img/cover.jpg"
+          src="https://i.postimg.cc/N0014JvN/cover.jpg"
           alt="Inspiration 4 crew"
           class="card__img"
         />
         <img
-          src="assets/img/space-x-logo.jpg"
+          src="https://i.postimg.cc/nhpKsVRf/space-x-logo.jpg"
           alt="SpaceX logo"
           class="card__logo"
         />
@@ -33,17 +34,18 @@
         </p>
         <div class="card__links">
           <a class="card__anchor" href="#">
-            <i class="fas fa-map-marker-alt"></i> Hawthorne, CA</a
+            <i class="card__icon fas fa-map-marker-alt"></i>
+            <span>Hawthorne, CA</span></a
           ><a class="card__anchor" href="#">
-            <i class="fas fa-link"></i> spacex.com</a
+            <i class="card__icon fas fa-link"></i> <span>spacex.com</span></a
           >
         </div>
       </div>
       <div class="card__social-media">
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-youtube"></i>
-        <i class="fab fa-linkedin"></i>
+        <i class="card__icon fab fa-twitter"></i>
+        <i class="card__icon fab fa-instagram"></i>
+        <i class="card__icon fab fa-youtube"></i>
+        <i class="card__icon fab fa-linkedin"></i>
       </div>
     </article>
   </body>
